# Cassava-Disease-Detection

./: .gitignore  .pre-commit-config.yaml  README.md  mlflow.db  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/data/: data.yaml
configs/model/: model1.yaml  model2.yaml  model3.yaml
configs/train/: train.yaml
src/cassava_classifier/: commands.py
src/cassava_classifier/data/: datamodule.py  dataset.py
src/cassava_classifier/models/: components.py  model.py
src/cassava_classifier/pipelines/: convert.py  infer.py  train.py
src/cassava_classifier/utils/: preprocessing.py
